<resources>
    <string name="app_name">IVY</string>
    <string name="title_activity_listing_help">ListingHelpActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="favourite">Favourite</string>
    <string name="mapview">Map View</string>
    <string name="your_location">Your Location</string>
    <string name="ivy_komal_pre_school">IVY: Komal Pre-School</string>
    <string name="open">Open</string>
    <string name="distance">Distance</string>
    <string name="dollar">$$</string>
    <string name="ivy_kids_safe_home">IVY: Kids Safe Home</string>
    <string name="about_us">About Us</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="age">2.0 - 5.0 years</string>
    <string name="age_groups">Age Groups</string>
    <string name="transportation">Transportation</string>
    <string name="preschool">Preschool</string>
    <string name="facilities">Facilities</string>
    <string name="lorem_ipsum2"> - Lorem ipsum dolor sit amet

    </string>
    <string name="reviews">Reviews</string>
    <string name="see_all_reviews">See all reviews ></string>
    <string name="feestructure">Request Fee Structure</string>
    <string name="average_review">Average Reviews</string>
    <string name="qualified_staff">Qualified Staff</string>
    <string name="curriculum">Curriculum</string>
    <string name="security">Security</string>
    <string name="infrastructure">Infrastructure</string>
    <string name="name">Name *</string>
    <string name="request_fee_structure">Request Fee Structure</string>
    <string name="komal_day_care_service_and_pre_nursery">Komal Day Care Service and Pre - Nursery</string>
    <string name="email">Email *</string>
    <string name="phone_number">Phone Number *</string>
    <string name="address">Address</string>
    <string name="age_of_the_child">Age of the child</string>
    <string name="is_transportation_required">Is Transportation Required?</string>
    <string name="additional_information">Additional Information</string>
    <string name="signup_loginin">SignUp|LoginIn</string>
    <string name="back">back</string>
    <string name="book_an_appointment">Book An Appointment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="can_t_find_a_suitable_fit">Can\'t find a suitable fit?</string>
    <string name="let_us_know_how_we_can_help_you_by_typing_here">Let us know how we can help you by typing here.</string>
    <string name="email_address">Email Address *</string>
    <string name="submit_review">Submit Review</string>
    <string name="post_review_for">Post Review For</string>
    <string name="how_do_you_feel_about_the_school">How do you feel about the school?</string>
    <string name="preferred_date_for_appointment">Preferred Date for Appointment</string>
    <string name="list_view">List View</string>


    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="login"><b>LOGIN</b></string>
    <string name="sign_up"><b>SIGN UP</b></string>
    <string name="PLEASE_SIGN_UP">Please Sing Up</string>
    <string name="to_add_your_review">to add your review</string>
    <string name="log_in_with_facebook">LOG IN WITH FACEBOOK</string>
    <string name="log_in_with_google">LOG IN WITH GOOGLE</string>
    <string name="or">OR</string>
    <string name="name1">NAME</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="email2">EMAIL</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="password">PASSWORD</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="your_favourite_schools">Your Favourite Schools</string>
    <string name="nurturing_future_leaders">NURTURING FUTURE LEADERS</string>
    <string name="sign_up_underline"><u>Sign Up</u></string>
    <string name="recent_search">Recent Search</string>
    <string name="recommendation_for_you">Recommendation for you</string>
    <string name="kidzone">Kid Zone</string>
    <string name="review">Review</string>
    <string name="username">UserName</string>
    <string name="last_active_day">Last Active Day</string>
    <string name="cancel">CANCEL</string>
    <string name="submit">SUBMIT</string>
    <string name="what_s_your_priority">What’s your priority?</string>
    <string name="how_did_you_feel_about_the_school">How did you feel about the school?</string>
    <string name="featured">Featured</string>
</resources>
