<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".SignUpFragment"
    app:cardUseCompatPadding="true"
    app:cardElevation="4dp"
    app:cardCornerRadius="3dp"
    android:layout_marginBottom="16dp">

    <android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/textViewname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/name1"
            android:textColor="@color/grey"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/signup_name"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/enter_your_name"
            android:inputType="text"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/textViewname"
            app:layout_constraintTop_toBottomOf="@+id/textViewname" />

    <TextView
        android:id="@+id/textViewemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/email2"
        android:textColor="@color/grey"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/textViewname"
        app:layout_constraintTop_toBottomOf="@+id/signup_name" />

    <EditText
        android:id="@+id/signup_email"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_your_email"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/signup_name"
        app:layout_constraintStart_toStartOf="@+id/signup_name"
        app:layout_constraintTop_toBottomOf="@+id/textViewemail" />

    <TextView
        android:id="@+id/textViewpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/password"
        android:textColor="@color/grey"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/textViewemail"
        app:layout_constraintTop_toBottomOf="@+id/signup_email" />

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/signup_email"
        app:layout_constraintStart_toStartOf="@+id/signup_email"
        app:layout_constraintTop_toBottomOf="@+id/textViewpassword" />

    <TextView
        android:id="@+id/textViewconfirmpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/confirm_password"
        android:textColor="@color/grey"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/textViewpassword"
        app:layout_constraintTop_toBottomOf="@+id/signup_password" />
    <EditText
        android:id="@+id/signup_confirmpassword"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/signup_password"
        app:layout_constraintStart_toStartOf="@+id/signup_password"
        app:layout_constraintTop_toBottomOf="@+id/textViewconfirmpassword" />

    <Button
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPrimaryDark"

        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/signup_confirmpassword"
        app:layout_constraintStart_toStartOf="@+id/signup_confirmpassword"
        app:layout_constraintTop_toBottomOf="@+id/signup_confirmpassword" />


</android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>