<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#fff">
    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:background="#fff"
        android:src="@drawable/ic_keyboard_backspace_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            xmlns:android="http://schemas.android.com/apk/res/android">


            <android.support.constraint.ConstraintLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/constraintLayout_inner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/feestructure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:gravity="start"
                    android:text="@string/book_an_appointment"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/school_name_fee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="start"
                    android:text="@string/komal_day_care_service_and_pre_nursery"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:autofillHints="fullname"
                    app:layout_constraintStart_toStartOf="@+id/feestructure"
                    app:layout_constraintTop_toBottomOf="@+id/feestructure" />

                <EditText
                    android:id="@+id/name_fee"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/ic_form_background"
                    android:elevation="40dp"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:padding="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/school_name_fee"
                    app:layout_constraintTop_toBottomOf="@+id/school_name_fee" />

                <EditText
                    android:id="@+id/email_fee"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/ic_form_background"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:padding="8dp"
                    app:layout_constraintEnd_toEndOf="@+id/name_fee"
                    app:layout_constraintStart_toStartOf="@+id/name_fee"
                    app:layout_constraintTop_toBottomOf="@+id/name_fee" />

                <EditText
                    android:id="@+id/phonenumber_fee"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/ic_form_background"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:padding="8dp"
                    app:layout_constraintEnd_toEndOf="@+id/email_fee"
                    app:layout_constraintStart_toStartOf="@+id/email_fee"
                    app:layout_constraintTop_toBottomOf="@+id/email_fee" />

                <EditText
                    android:id="@+id/Edittxt_date_appointment"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/ic_form_background"
                    android:hint="@string/preferred_date_for_appointment"
                   android:inputType="date"
                    android:drawableEnd="@drawable/ic_today_black_24dp"
                    android:padding="8dp"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="@+id/phonenumber_fee"
                    app:layout_constraintStart_toStartOf="@+id/phonenumber_fee"
                    app:layout_constraintTop_toBottomOf="@+id/phonenumber_fee" />

                <EditText
                    android:id="@+id/additional_info_appointment"
                    android:layout_width="0dp"
                    android:layout_height="156dp"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/ic_form_background"
                    android:hint="@string/additional_information"
                    android:inputType="text"
                    android:padding="8dp"
                    app:layout_constraintEnd_toEndOf="@+id/Edittxt_date_appointment"
                    app:layout_constraintStart_toStartOf="@+id/Edittxt_date_appointment"
                    app:layout_constraintTop_toBottomOf="@+id/Edittxt_date_appointment"
                    />
                <Button
                    android:id="@+id/btn_bookanappointment"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="32dp"
                    android:background="@color/colorAccent"
                    android:text="@string/book_an_appointment"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@+id/additional_info_appointment"
                    />
            </android.support.constraint.ConstraintLayout>
        </ScrollView>

    </FrameLayout>
</LinearLayout>