<?xml version="1.0" encoding="utf-8"?>
    <FrameLayout
        android:id="@+id/frameLayout_top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".RegisterActivity"
    android:background="@color/grey2">
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/signup_bg" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/btn_back_register_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:background="@null"
                android:focusable="true"
                android:src="@drawable/ic_keyboard_backspace_white_24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/back"/>

            <TextView
                android:id="@+id/txtview_please_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="64dp"
                android:text="@string/PLEASE_SIGN_UP"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/to_add_your_review"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/txtview_please_sign_up"
                app:layout_constraintTop_toBottomOf="@+id/txtview_please_sign_up" />


            <LinearLayout
                android:id="@+id/linear_layout_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5">
                <Button
                    android:id="@+id/facebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="#3b5998"
                    android:minWidth="64dp"
                    android:text="@string/log_in_with_facebook"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:layout_marginEnd="2dp"
                    />

                <Button
                    android:id="@+id/Google"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="#D44638"
                    android:minWidth="64dp"
                    android:text="@string/log_in_with_google"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:layout_marginStart="2dp"/>

            </LinearLayout>


            <View
                android:id="@+id/divider1"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/textView6"
                app:layout_constraintEnd_toStartOf="@+id/textView6"
                app:layout_constraintStart_toStartOf="@+id/linear_layout_buttons"
                app:layout_constraintTop_toTopOf="@+id/textView6" />

            <View
                android:id="@+id/divider2"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/textView6"
                app:layout_constraintEnd_toEndOf="@+id/linear_layout_buttons"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/or"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/linear_layout_buttons"
                app:layout_constraintStart_toStartOf="@+id/linear_layout_buttons"
                app:layout_constraintTop_toBottomOf="@+id/linear_layout_buttons" />

            <LinearLayout
                android:id="@+id/LinearLayout_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6">

                <android.support.design.widget.AppBarLayout
                    android:id="@+id/appbar"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:theme="@style/CustomTabLayout"
                    android:elevation="0dp"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior">

                    <android.support.design.widget.TabLayout
                        android:id="@+id/tabs"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        app:tabIndicatorFullWidth="false"
                        app:tabIndicatorGravity="top">

                        <android.support.design.widget.TabItem
                            android:id="@+id/tabItem"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/login" />

                        <android.support.design.widget.TabItem
                            android:id="@+id/tabItem2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sign_up" />
                    </android.support.design.widget.TabLayout>
                </android.support.design.widget.AppBarLayout>
<!--

            <android.support.v4.view.ViewPager
                    android:id="@+id/container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/appbar" />


                <android.support.v4.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fillViewport="true"
                    app:layout_constraintBottom_toTopOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/appbar">



                </android.support.v4.widget.NestedScrollView>-->
                <FrameLayout
                    android:id="@+id/container_frame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    app:layout_constraintBottom_toTopOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/appbar" />

            </LinearLayout>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    </FrameLayout>
